[gd_scene load_steps=2 format=3 uid="uid://hbn3bq3q4n0fk"]

[ext_resource type="Script" uid="uid://d7r5b7v3h7c4u" path="res://ui/game/hud/buffs_aura_hud.gd" id="1_5g8he"]

[node name="BuffsAuraHUD" type="CanvasLayer"]
script = ExtResource("1_5g8he")

[node name="Root" type="Control" parent="."]
custom_minimum_size = Vector2(240, 36)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Root"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(230, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -230.0
offset_top = 40.0
offset_right = 0.0
offset_bottom = 74.0
grow_vertical = 0

[node name="SlotRow" type="HBoxContainer" parent="Root/Panel"]
custom_minimum_size = Vector2(230, 34)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 6

[node name="SlotContainer0" type="VBoxContainer" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(32, 34)
layout_mode = 2
alignment = 2

[node name="SlotButton" type="TextureButton" parent="Root/Panel/SlotRow/SlotContainer0"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Root/Panel/SlotRow/SlotContainer0/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="GapLarge1" type="Control" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(16, 1)
layout_mode = 2

[node name="SlotContainer1" type="VBoxContainer" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(32, 34)
layout_mode = 2
alignment = 2

[node name="SlotButton" type="TextureButton" parent="Root/Panel/SlotRow/SlotContainer1"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Root/Panel/SlotRow/SlotContainer1/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="GapLarge2" type="Control" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(16, 1)
layout_mode = 2

[node name="SlotContainer2" type="VBoxContainer" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(40, 34)
layout_mode = 2
alignment = 2

[node name="SlotRow" type="HBoxContainer" parent="Root/Panel/SlotRow/SlotContainer2"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SlotButton" type="TextureButton" parent="Root/Panel/SlotRow/SlotContainer2/SlotRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Root/Panel/SlotRow/SlotContainer2/SlotRow/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ArrowButton" type="Button" parent="Root/Panel/SlotRow/SlotContainer2/SlotRow"]
custom_minimum_size = Vector2(12, 28)
layout_mode = 2
text = "▲"

[node name="GapSmall1" type="Control" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(6, 1)
layout_mode = 2

[node name="SlotContainer3" type="VBoxContainer" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(40, 34)
layout_mode = 2
alignment = 2

[node name="SlotRow" type="HBoxContainer" parent="Root/Panel/SlotRow/SlotContainer3"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SlotButton" type="TextureButton" parent="Root/Panel/SlotRow/SlotContainer3/SlotRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Root/Panel/SlotRow/SlotContainer3/SlotRow/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ArrowButton" type="Button" parent="Root/Panel/SlotRow/SlotContainer3/SlotRow"]
custom_minimum_size = Vector2(12, 28)
layout_mode = 2
text = "▲"

[node name="GapSmall2" type="Control" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(6, 1)
layout_mode = 2

[node name="SlotContainer4" type="VBoxContainer" parent="Root/Panel/SlotRow"]
custom_minimum_size = Vector2(40, 34)
layout_mode = 2
alignment = 2

[node name="SlotRow" type="HBoxContainer" parent="Root/Panel/SlotRow/SlotContainer4"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SlotButton" type="TextureButton" parent="Root/Panel/SlotRow/SlotContainer4/SlotRow"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Root/Panel/SlotRow/SlotContainer4/SlotRow/SlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ArrowButton" type="Button" parent="Root/Panel/SlotRow/SlotContainer4/SlotRow"]
custom_minimum_size = Vector2(12, 28)
layout_mode = 2
text = "▲"

[node name="ToggleButton" type="Button" parent="Root"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -30.0
offset_top = 40.0
offset_right = 0.0
offset_bottom = 70.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "▶"

[node name="FlyoutsLayer" type="Control" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
z_index = 5
